[package]
name = "gopher"
version = "0.1.0"
edition = "2024"

[dependencies]
glenda = { path = "../../lib/libglenda-rs", features = [
    "rt-service",
], package = "libglenda-rs" }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "alloc",
] }
managed = { version = "0.8", default-features = false, features = ["alloc"] }
