[package]
name = "gopher"
version = "0.1.0"
edition = "2024"

[dependencies]
glenda-drivers = { path = "../../lib/libglenda_drivers-rs", package = "libglenda_drivers-rs" }
glenda = { path = "../../lib/libglenda-rs", features = [
    "rt-service",
], package = "libglenda-rs" }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "alloc",
] }
managed = { version = "0.8", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
