[package]
name = "gopher"
version = "0.1.0"
edition = "2024"

[dependencies]
libglenda-rs = { path = "../../lib/libglenda-rs", features = ["rt-service"] }
libglenda_drivers-rs = { path = "../../lib/libglenda_drivers-rs" }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "alloc",
] }
managed = { version = "0.8", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
